--- a/MeetPoint.API/MeetPoint.API/appsettings.Development.json
+++ b/MeetPoint.API/MeetPoint.API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=MeetPoint;User Id=sa;Password=1234; Trusted_Connection=false; TrustServerCertificate=true;"
   },
+  "PageSize": 2,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
